schema/testdata/validation_invalid_with_usage/schema.keel
model Person {
    fields {
        name Text
    }

    operations {
        get getPerson(id) with (name)
        list listPerson() with (name)
        delete deletePerson(id) with (name)
    }
}
